# jane-street-knight-moves-6

./: README.md  app.py  pyproject.toml
src/knight_moves_6/calculation/: calculate_score.py  constant.py  coordinate_map.py  validation.py
src/knight_moves_6/model/: database.py  model_abc.py  model_base.py  model_path.py  model_score.py  model_solution.py  operations.py
src/knight_moves_6/solver/: generate_abc.py  generate_paths.py  generate_paths_a1.py  generate_paths_a6.py  solver.py
src/knight_moves_6/visualization/: plot_grid.py
